--- a/client/templates/User.html
+++ b/client/templates/User.html
@@ -1,2 +1,11 @@
 <template name="User">
+    {{>header}}
+    <h1>
+        {{_ "user.queue"}}
+    </h1>
+    <ul>
+        <li></li>
+    </ul>
+    <!-- TODO: ここにTwitterタイムラインを埋め込む -->
+    {{>footer}}
 </template>
